refactor(core): establish persistence and configuration foundation